--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
         });
         term.open(document.getElementById('terminal'));
 
-        const ws = new WebSocket(`ws://${location.hostname}:${location.port}`);
+        const protocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+        const ws = new WebSocket(`${protocol}//${location.host}`);
 
         let codeBuffer = '';
 
@@ -41,8 +42,8 @@
         term.onData((data) => {
             if (data === '\r') { // User presses Enter
                 if (codeBuffer.trim()) {
-                    ws.send(codeBuffer); // Send the complete Python code to the server
-                    codeBuffer = ''; // Reset the code buffer
+                    ws.send(codeBuffer); // Send the complete code buffer
+                    codeBuffer = ''; // Reset the buffer
                     term.write('\r\n'); // Move to the next line in the terminal
                 } else {
                     term.write('\r\n'); // Empty line, just move to the next line
